<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideTop"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="@id/guideTop"
            app:layout_constraintStart_toStartOf="@id/guideStart"
            app:layout_constraintEnd_toEndOf="@id/guideEnd"
            android:text="@string/home_title"
            style="@style/AppTheme.HomeTitle"/>


        <TextView
            android:id="@+id/versionTextView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="@id/guideStart"
            app:layout_constraintEnd_toEndOf="@id/guideEnd"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/app_version"
            style="@style/AppTheme.HomeVersion"/>

        <TextView
            android:id="@+id/codeTextView"
            app:layout_constraintTop_toBottomOf="@id/versionTextView"
            app:layout_constraintStart_toStartOf="@id/guideStart"
            app:layout_constraintEnd_toEndOf="@id/guideEnd"
            tools:text="version_code (1000)"
            android:text="@string/app_code"
            style="@style/AppTheme.HomeCode"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>