<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#ffffff"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:showIn="@layout/fragment_detail">

        <TextView
            android:id="@+id/ratingTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#015195"
            android:textSize="18sp"
            android:text="@string/ratings"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ratingValueTextView"
            app:layout_constraintTop_toBottomOf="@id/ratingTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="#1281CE"
            android:textSize="36sp"
            android:text="4.5"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/totalRatingTextView"
            app:layout_constraintTop_toTopOf="@id/ratingValueTextView"
            app:layout_constraintBottom_toBottomOf="@id/ratingValueTextView"
            app:layout_constraintStart_toEndOf="@id/ratingValueTextView"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColor="#616161"
            android:textSize="14sp"
            tools:text="@string/total_ratings"
            android:fontFamily="sans-serif-medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/labelLastCommentTextView"
            app:layout_constraintTop_toBottomOf="@id/ratingValueTextView"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="#015195"
            android:textSize="14sp"
            android:text="@string/label_last_comment"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/ratingUserTextView"
            app:layout_constraintTop_toBottomOf="@id/labelLastCommentTextView"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="#000000"
            android:textSize="14sp"
            android:text="Alexandre"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/commentTextView"
            app:layout_constraintTop_toBottomOf="@id/ratingUserTextView"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:text="Produto Maravilhoso !"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>